--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "node app sample",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
   },
   "scripts": {
-    "start": "node .",
+    "start": "node app.js",
     "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
