--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "node app sample",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
     "mongodb": "^4.4.1",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.3.0"
